Add card design.

--- a/index.html
+++ b/index.html
@@ -95,11 +95,141 @@
             </div>
         </div>
     </section>
-   <section class="hot_deals pt-5" style="padding-bottom: 100px;">
+   <section class="hot_deals" style="padding-top: 100px;padding-bottom: 80px;">
     <div class="container">
         <div class="section-header">
             <h2>Latest Hot Deals</h2>
             <a href="#">View All Deals <i class="fa fa-chevron-right" style="font-size: 11px;"></i></a>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+                <div class="product-card">
+                    <div class="product-card__box">
+                        <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                        <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                        <figure>
+                            <img src="./product-1.png" alt="Product">
+                        </figure>
+                    </div>
+                    <div class="product-card__content">
+                        <h4 class="color-red">Digital Camera</h4>
+                        <h3>Sony ZV-1</h3>
+                        <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-card">
+                    <div class="product-card__box">
+                        <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                        <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                        <figure>
+                            <img src="./product-1.png" alt="Product">
+                        </figure>
+                    </div>
+                    <div class="product-card__content">
+                        <h4 class="color-red">Digital Camera</h4>
+                        <h3>Sony ZV-1</h3>
+                        <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-card">
+                    <div class="product-card__box">
+                        <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                        <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                        <figure>
+                            <img src="./product-1.png" alt="Product">
+                        </figure>
+                    </div>
+                    <div class="product-card__content">
+                        <h4 class="color-red">Digital Camera</h4>
+                        <h3>Sony ZV-1</h3>
+                        <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-card">
+                    <div class="product-card__box">
+                        <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                        <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                        <figure>
+                            <img src="./product-1.png" alt="Product">
+                        </figure>
+                    </div>
+                    <div class="product-card__content">
+                        <h4 class="color-red">Digital Camera</h4>
+                        <h3>Sony ZV-1</h3>
+                        <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-card">
+                    <div class="product-card__box">
+                        <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                        <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                        <figure>
+                            <img src="./product-1.png" alt="Product">
+                        </figure>
+                    </div>
+                    <div class="product-card__content">
+                        <h4 class="color-red">Digital Camera</h4>
+                        <h3>Sony ZV-1</h3>
+                        <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-card">
+                    <div class="product-card__box">
+                        <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                        <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                        <figure>
+                            <img src="./product-1.png" alt="Product">
+                        </figure>
+                    </div>
+                    <div class="product-card__content">
+                        <h4 class="color-red">Digital Camera</h4>
+                        <h3>Sony ZV-1</h3>
+                        <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-card">
+                    <div class="product-card__box">
+                        <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                        <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                        <figure>
+                            <img src="./product-1.png" alt="Product">
+                        </figure>
+                    </div>
+                    <div class="product-card__content">
+                        <h4 class="color-red">Digital Camera</h4>
+                        <h3>Sony ZV-1</h3>
+                        <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="product-card">
+                    <div class="product-card__box">
+                        <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                        <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                        <figure>
+                            <img src="./product-1.png" alt="Product">
+                        </figure>
+                    </div>
+                    <div class="product-card__content">
+                        <h4 class="color-red">Digital Camera</h4>
+                        <h3>Sony ZV-1</h3>
+                        <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
@@ -123,8 +253,65 @@
 
             </div>
             <div class="col-md-8">
-                <div class="container">
-                <div   class="owl-two owl-carousel owl-theme">
+                <div class="hot-deal__carousel owl-carousel owl-theme">
+                    <div class="product-card item">
+                        <div class="product-card__box">
+                            <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                            <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                            <figure>
+                                <img src="./product-1.png" alt="Product">
+                            </figure>
+                        </div>
+                        <div class="product-card__content">
+                            <h4 class="color-red">Digital Camera</h4>
+                            <h3>Sony ZV-1</h3>
+                            <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                        </div>
+                    </div>
+                    <div class="product-card item">
+                        <div class="product-card__box">
+                            <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                            <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                            <figure>
+                                <img src="./product-1.png" alt="Product">
+                            </figure>
+                        </div>
+                        <div class="product-card__content">
+                            <h4 class="color-red">Digital Camera</h4>
+                            <h3>Sony ZV-1</h3>
+                            <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                        </div>
+                    </div>
+                    <div class="product-card item">
+                        <div class="product-card__box">
+                            <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                            <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                            <figure>
+                                <img src="./product-1.png" alt="Product">
+                            </figure>
+                        </div>
+                        <div class="product-card__content">
+                            <h4 class="color-red">Digital Camera</h4>
+                            <h3>Sony ZV-1</h3>
+                            <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                        </div>
+                    </div>
+                    <div class="product-card item">
+                        <div class="product-card__box">
+                            <div class="product-card__info product-card__info--red product-card__info--left">15%</div>
+                            <div class="product-card__info product-card__info--blue product-card__info--right">New</div>
+                            <figure>
+                                <img src="./product-1.png" alt="Product">
+                            </figure>
+                        </div>
+                        <div class="product-card__content">
+                            <h4 class="color-red">Digital Camera</h4>
+                            <h3>Sony ZV-1</h3>
+                            <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                        </div>
+                    </div>
+                </div>
+                <!-- <div   class="owl-two owl-carousel owl-theme">
                     <div class="card" >
                     <div class="item">
                        <img src="dslr.jpg">
@@ -190,7 +377,7 @@
                                         </div>
                 
                                        </div></div></div>
-                                    </div></div>
+                                    </div> -->
                 </div>                
             </div>
         </div>
