--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
       <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     
                         <div class="text">
                         <h3>Winter Sale</h3>
@@ -131,7 +131,7 @@
                     </div>
                 
                 </div>
-                <div class="col-md-8">
+                <div class="col-md-9">
                     <div class="hot-deal__carousel owl-carousel owl-theme">
                         <div class="product-card item">
                             <div class="product-card__box">
@@ -142,8 +142,8 @@
                                 </figure>
                             </div>
                             <div class="product-card__content">
-                                <h4 class="color-red">Digital Camera</h4>
-                                <h3>Sony ZV-1</h3>
+                                <p class="color-red">Digital Camera</p>
+                                <p style="font-size: 18px;"> <b>Sony ZV-1 </b></p>
                                 <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
                             </div>
                         </div>
@@ -156,8 +156,8 @@
                                 </figure>
                             </div>
                             <div class="product-card__content">
-                                <h4 class="color-red">Digital Camera</h4>
-                                <h3>Sony ZV-1</h3>
+                                <p class="color-red">Digital Camera</p>
+                                <p style="font-size: 18px;"><b>Sony ZV-1</b></p>
                                 <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
                             </div>
                         </div>
@@ -170,8 +170,8 @@
                                 </figure>
                             </div>
                             <div class="product-card__content">
-                                <h4 class="color-red">Digital Camera</h4>
-                                <h3>Sony ZV-1</h3>
+                                <p class="color-red">Digital Camera</p>
+                                <p style="font-size: 18px;"><b>Sony ZV-1</b></p>
                                 <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
                             </div>
                         </div>
@@ -184,8 +184,8 @@
                                 </figure>
                             </div>
                             <div class="product-card__content">
-                                <h4 class="color-red">Digital Camera</h4>
-                                <h3>Sony ZV-1</h3>
+                                <p class="color-red">Digital Camera</p>
+                                <p style="font-size: 18px;"><b>Sony ZV-1</b></p>
                                 <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
                             </div>
                         </div>
@@ -198,8 +198,8 @@
                                 </figure>
                             </div>
                             <div class="product-card__content">
-                                <h4 class="color-red">Digital Camera</h4>
-                                <h3>Sony ZV-1</h3>
+                                <p class="color-red">Digital Camera</p>
+                                <p style="font-size: 18px;"><b>Sony ZV-1</b></p>
                                 <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
                             </div>
                         </div>
@@ -212,8 +212,8 @@
                                 </figure>
                             </div>
                             <div class="product-card__content">
-                                <h4 class="color-red">Digital Camera</h4>
-                                <h3>Sony ZV-1</h3>
+                                <p class="color-red">Digital Camera</p>
+                                <p style="font-size: 18px;"><b>Sony ZV-1</b></p>
                                 <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
                             </div>
                         </div>
@@ -382,7 +382,7 @@
         </div>
     </div>
    </section>
-   <section class="discover">
+  <!-- <section class="discover">
     <div class="container">
          <div class="discover_main">
             <div class="black_text">
@@ -411,7 +411,36 @@
          </div>
     </div>
 
-   </section>
+   </section>-->
+
+   <!--discover section using skewed-->
+
+    <section class="product-info_section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="product-info_section--left product-info_section--content">
+                         <h1>Discover The Best Travel Camera</h1>
+                         <p>Go to the place where you are not going to stressed</p>
+                         <button>View More</button>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="product-info_section--right product-info_section--content">
+                        <h1>FULL FRAME EF CAMERA</h1>
+                        <p>Go to the place where you are not going to stressed</p>
+                        <h3>Special offer</h3>
+                        <button class="button1">ONLY<br> <b style="font-size: 35px; font-weight: 400;">$103</b></button>
+                        <button class="button2"> <b style="font-size: 35px; font-weight: 400;">20%</b><br>OFF</button>
+                    </div>
+
+                </div>
+
+
+            </div>
+        </div>
+      </section>
+    <!-- <a href="#">View All Categories</a> --> <!--new product section-->
    <section class="featured-category__section pt-5" style="padding-bottom: 100px;">
     <div class="container">
         <div class="section-header">
@@ -423,7 +452,9 @@
                 <li>MIRRORLESS</li>
                 <li>360 CAMERAS</li>
             </ul>
+
             <!-- <a href="#">View All Categories</a> -->
+
         </div>
     </div>
     <div class="container">
@@ -437,9 +468,7 @@
                     </figure>
                 </div>
                 <div class="product-card__content">
-                    <h4 class="color-red">Digital Camera</h4>
-                    <h3>Sony ZV-1</h3>
-                    <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    <h6 class="color-black">Digital Camera</h6>
                 </div>
             </div>
             <div class="product-card item">
@@ -451,9 +480,7 @@
                     </figure>
                 </div>
                 <div class="product-card__content">
-                    <h4 class="color-red">Digital Camera</h4>
-                    <h3>Sony ZV-1</h3>
-                    <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    <h6 class="color-black">Digital Camera</h6>
                 </div>
             </div>
             <div class="product-card item">
@@ -465,9 +492,7 @@
                     </figure>
                 </div>
                 <div class="product-card__content">
-                    <h4 class="color-red">Digital Camera</h4>
-                    <h3>Sony ZV-1</h3>
-                    <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    <h6 class="color-black">Digital Camera</h6>
                 </div>
             </div>
             <div class="product-card item">
@@ -479,9 +504,7 @@
                     </figure>
                 </div>
                 <div class="product-card__content">
-                    <h4 class="color-red">Digital Camera</h4>
-                    <h3>Sony ZV-1</h3>
-                    <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    <h6 class="color-black">Digital Camera</h6>
                 </div>
             </div>
             <div class="product-card item">
@@ -493,9 +516,7 @@
                     </figure>
                 </div>
                 <div class="product-card__content">
-                    <h4 class="color-red">Digital Camera</h4>
-                    <h3>Sony ZV-1</h3>
-                    <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    <h6 class="color-black">Digital Camera</h6>
                 </div>
             </div>
             <div class="product-card item">
@@ -507,9 +528,7 @@
                     </figure>
                 </div>
                 <div class="product-card__content">
-                    <h4 class="color-red">Digital Camera</h4>
-                    <h3>Sony ZV-1</h3>
-                    <div class="product-card__price">$180.00 <del class="color-red">$180.00</del></div>
+                    <h6 class="color-black">Digital Camera</h6>
                 </div>
             </div>
         </div>
